Added numbers function and clear button function

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: rgb(153, 194, 194);
 
 
 }
@@ -10,7 +11,8 @@ html{
     background-color: rgb(0, 0, 0);
     width: 28rem;
     height: 40rem;
-    border: 1px solid yellow;
+    border: 1px solid black;
+    box-shadow: 0 0 5px black;
     margin: 100px auto;
     border-radius: 15px;
 }
@@ -22,11 +24,25 @@ html{
     margin: auto;
     margin-top: 16px;
     border-radius: 10px;
+    font-family: 'Monomaniac One', sans-serif;
 }
-.screen .top {
-    height: 3rem;
+.top,
+.down {
+    text-align: right;
+    padding: 10px;
+    margin: 0;
+
  
 }
+.top {
+    font-size: 30px;
+}
+
+.down {
+    font-size: 85px;
+    size-adjust: 50%;
+}
+
 
 #numbers-container {
     height: 27rem;
@@ -51,9 +67,45 @@ html{
 
 button {
     margin: 2px;
-    border-radius: 5px;
-    background-color: rgb(172, 172, 163);
+    border-radius: 10px;
+    background-color: rgb(201, 201, 170);
     font-size: medium;
     font-weight: bold;
+    border: 0;
+    font-family: 'Orbitron';
+    
 
+}
+
+button:hover {
+    margin: 2px;
+    border-radius: 10px;
+    background-color: rgb(240, 240, 224);
+    font-size: medium;
+    font-weight: bold;
+    border: 0;
+
+}
+
+.operator {
+    background-color: rgb(87, 253, 87);
+}
+.operator:hover {
+    background-color: rgb(150, 252, 150);
+}
+
+.clear {
+    background-color: rgb(255, 34, 34);
+}
+.clear:hover {
+    background-color: rgb(255, 82, 82);
+    transform: scale(0.97);
+}
+
+.delete {
+    background-color: rgb(118, 118, 255);
+}
+
+.delete:hover {
+    background-color: rgb(144, 144, 255);
 }
